# lupex-chorus-bbd

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
source/dsp/: BBDFilter.cpp  BBDFilter.h  ChorusEngine.cpp  ChorusEngine.h  DelayLine.cpp  DelayLine.h  LupexEngine.cpp  LupexEngine.h  ShelfFilter.cpp  ShelfFilter.h  TapeEmulator.cpp  TapeEmulator.h  WowFlutter.cpp  WowFlutter.h
source/parameters/: ChorusParameters.cpp  ChorusParameters.h  LupexParameters.cpp  LupexParameters.h  ParameterIDs.h
source/plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/ui/: BypassButton.cpp  BypassButton.h  LupexKnob.cpp  LupexKnob.h  LupexToggle.cpp  LupexToggle.h  PedalLookAndFeel.cpp  PedalLookAndFeel.h
tests/: BBDFilterTest.cpp  ChorusEngineTest.cpp  DelayLineTest.cpp  ParametersTest.cpp
